$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-11-19 [A] Display more batch add error messages {Nibbler}
2010-11-19 [O] Adjusted/added maxlength parameter for album title/keyword according to database types (thread ID 67671) {eenemeenemuu}
2010-11-19 [O] Consistent use of plugin hook types 'action' and 'filter' (thread ID 67630) {eenemeenemuu}
2010-11-16 [B] Fixed ownership of albums created with xp publisher {Nibbler}
2010-11-15 [B] Add anonymous group if it doesn't exist (thread ID 67137) {eenemeenemuu}
2010-11-14 [B] Fixed comment approval when editing comments (thread ID 68066) {Nibbler}
2010-11-10 [O] No longer specify a MySQL engine - use the server default. {Nibbler}
2010-11-10 [B] Fixed picture manager - show user created albums in public categories (thread ID 67937) {eenemeenemuu}
2010-11-10 [B] Fixed renaming of already added files during batch-add (thread ID 67993) {eenemeenemuu}
2010-11-05 [C] Fixed error message when entering invalid email address in profile manager (thread ID 67903) {eenemeenemuu}
2010-11-05 [C] Fixed spelling of ImageMagick (thread ID 67902) {eenemeenemuu}
2010-11-04 [B] Removed declaration of function 'cpg_folder_file_delete' from update.php (thread ID 65708) {eenemeenemuu}
2010-11-04 [B] Fixed picture resizing via admin tools (thread ID 66802) {eenemeenemuu}
2010-11-04 [B] Removed value 'SERVER_PROTOCOL' from client ID generator (thread ID 59698) {eenemeenemuu}
2010-11-02 [C] Added label for 'remember me' checkbox (thread ID 67840) {eenemeenemuu}
2010-11-01 [B] Skip unknown file types during batch-add process (thread ID 67815) {eenemeenemuu}